# RustTokenLoggerForDiscord

./: Cargo.toml  README.md  server.py
src/: main.rs
